<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="36dp"
        android:text="@string/Tittle"
        android:textColor="@color/teal_700"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="121dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="404dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listUsers"
        android:layout_width="365dp"
        android:layout_height="297dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="44dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="120dp"
        android:text="@string/Description"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/writeID"
        android:layout_width="129dp"
        android:layout_height="38dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/fondo" />

</androidx.constraintlayout.widget.ConstraintLayout>