<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="2dp"
        android:gravity="center_horizontal"
        android:text="@string/User"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/noID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="157dp"
        android:gravity="center_horizontal"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Delete"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnUpdate"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="188dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoRol"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="320dp"
        android:gravity="center_horizontal"
        android:text="@string/NoText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoName"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="452dp"
        android:gravity="center_horizontal"
        android:text="@string/NoText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoUser"
        android:layout_width="98dp"
        android:layout_height="46dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="388dp"
        android:gravity="center_horizontal"
        android:text="@string/NoText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="104dp"
        android:layout_height="112dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/identificador" />

</androidx.constraintlayout.widget.ConstraintLayout>